...
              MaterialPageRoute(
                builder: (context) => const CreateManuscriptPage(),
              ),
            );
          },
          icon: const Icon(Icons.add),
          label: const Text("New Manuscript"),
          style: ElevatedButton.styleFrom(
            backgroundColor: const Color(0xFFFF8B7D),
            foregroundColor: Colors.white,
            padding: const EdgeInsets.symmetric(horizontal: 20, vertical: 20),
            shape:
                RoundedRectangleBorder(borderRadius: BorderRadius.circular(10)),
...
