...
              ),
            const SizedBox(width: 10),
            PopupMenuButton(
              icon: const Icon(Icons.more_vert, color: Colors.grey),
              itemBuilder: (context) => [
                PopupMenuItem(
                  child: const Text("Delete"),
                  onTap: () => _deleteNotification(id),
                ),
              ],
            ),
          ] else
            // Popup menu for mobile always at end
...
